<resources>
    <string name="app_name">Windy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dashes">--</string>
    <string name="locality_label">Locality</string>
    <string name="getting_weather_data_label">Getting weather data...</string>
    <string name="humidity_label">humidity</string>
    <string name="rain_label">Rain/ Snow</string>
    <string name="time_label">At 00:00 it will be</string>
    <string name="refresh_image_view">refreshImageView</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="wind_value">-- m</string>

    <string name="dash_label">--</string>
    <string name="lacality_label">City, Country</string>
    <string name="getting_label">Getting Data...</string>
    <string name="weather_icon_desc">Weather Icon</string>
    <string name="percentage_label">%</string>
    <string name="kph_label">kph</string>
    <string name="week_label">Week</string>
</resources>
